k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: chatbot-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: chatbot

  template:
    metadata:
      labels:
        app: chatbot

    spec:
      containers:
      - name: chatbot

        image: lokeshreddy45/chatbot:latest

        ports:
        - containerPort: 5000
